<resources>
    <string name="device_list_dialog_title">Device</string>
    <string name="device_list_empty_tip">Please connect a USB Camera</string>
    <string name="device_list_cancel_button">Cancel</string>
    <string name="device_list_confirm_button">Confirm</string>


    <string name="sdk_init">SDK Init</string>
    <string name="no_mask_please">No mask</string>
    <string name="face_verifying">Verifying(face the camera)</string>
    <string name="confirm">Done</string>
    <string name="retry">Retry</string>
    <string name="long_press_copy_msg">Tips: Long press to copy msg</string>
    <string name="share_faceai_sdk">Share FaceAI SDK </string>
    <string name="share_faceai_sdk_content">Android On_device 1:1 Face Recognition And
        Liveness detection；1:N M:N Face Search SDK.
        \nAPK Download：https://www.pgyer.com/faceVerify
        \nIntroduce：https://mp.weixin.qq.com/s/_ro9zBfzAmkpazL-QAPi9w
        \n\nIntegrated Source Code：https://github.com/AnyLifeZLB/FaceVerificationSDK </string>

    <!--添加人脸 add face image-->
    <string name="keep_face_tips">Face the camera and keep your face visible</string>
    <string name="no_close_eye_tips">Do not close eye</string>
    <string name="no_tilt_head_tips">Do not tile head</string>
    <string name="head_turn_left_tips">Dead turn left too more</string>
    <string name="head_turn_right_tips">Dead turn right too more</string>
    <string name="no_look_up_tips">Do not look up</string>
    <string name="no_look_down_tips">Do not look down</string>
    <string name="no_face_detected_tips">No face detected</string>
    <string name="multiple_faces_tips">Multiple faces</string>
    <string name="come_closer_tips">Please come closer</string>
    <string name="far_away_tips">Please far away screen</string>
    <string name="align_face_error_tips">Align face error</string>
    <string name="not_real_face">Not real human face</string>
    <string name="not_real_face_for_debug">Not real human face </string>
    <string name="add_a_face_image">Add a face image </string>

    <!--1:N 人脸搜索 face search-->
    <string name="no_matched_face">No matched face</string>
    <string name="face_dir_empty">Face dir empty</string>

    <!--1:1 人脸识别 face verify -->
    <string name="face_verify_failed">Face verify failed！Please retry</string>
    <string name="silent_anti_spoofing_error">Silent anti spoofing error</string>
    <string name="no_base_face_bitmap">No base face bitmap error</string>

    <!--Motion liveness detection-->
    <string name="motion_liveness_detection_failed">Motion liveness detection failed</string>
    <string name="keep_face_visible">Face the camera,verifying..</string>
    <string name="repeat_open_close_mouse">Repeat open close mouse</string>
    <string name="motion_smile">Please smile </string>
    <string name="motion_blink_eye">Please blink eye</string>
    <string name="motion_shake_head">Please shake head</string>
    <string name="motion_node_head">Please node head </string>
    <string name="motion_liveness_detection_time_out">Motion liveness detection time out </string>
    <string name="no_face_or_repeat_switch_screen">No face or repeat switch screen </string>
    <string name="stop_verify_tips">Stop verify,keep your face visible </string>

    <!--Navi activity-->
    <string name="camera_degree_set">Switch Camera Degree,Now is:</string>
    <string name="parameter_setting">Parameter settings</string>
    <string name="binocular_camera_demo">Binocular Camera Demo</string>
    <string name="face_verify_1vs1">1:1 Face Verify </string>
    <string name="add_face_image">Add face Image</string>
    <string name="only_motion_liveness_detection">Only motion liveness detection</string>
    <string name="face_search_navi">1:N &amp; M:N  Face Search </string>
    <string name="face_search">Face Search</string>
    <string name="two_face_image_verify">two face image 1:1 verify</string>
    <string name="switch_camera">Switch front/back camera </string>
    <string name="about_us">- About us - </string>
    <string name="custom_camera">custom system camera diy </string>



    <!--1:N and M:N face search-->
    <string name="face_image_manger">Face images manger</string>
    <string name="face_search_1fromN">1:N face search</string>
    <string name="face_search_uvc_camera">Search with uvc camera</string>
    <string name="face_search_MfromN">M:N face search</string>
    <string name="search_threshold_scope_tips">Threshold should in [0.85,0.95]</string>

</resources>
