<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/face_lib_main_color"
    android:paddingTop="100dp"
    tools:context=".FaceAINaviActivity">

    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/face_verify_card"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:cardCornerRadius="5dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="11dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/update_base_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="4dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/face_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/face_verify_1vs1"
                android:textColor="#2DCC18"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/update_base_image"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:cardCornerRadius="5dp"
        android:layout_marginRight="29dp"
        android:layout_marginLeft="11dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/face_verify_card"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_add_face" />

            <TextView
                android:id="@+id/change_base_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/add_face_image"
                android:textColor="#2DCC18"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/update_base_image" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/face_search_1_n"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:visibility="visible"
        android:text="@string/face_search_navi"
        android:textColor="@color/green"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/face_verify_card" />


    <TextView
        android:id="@+id/change_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/more_about_me"
        android:text="@string/switch_camera" />


    <TextView
        android:id="@+id/more_about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="11dp"
        android:visibility="visible"
        android:text="@string/about_us"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>